--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_dashboard">Обучение</string>
     <string name="title_notifications">Меню</string>
     <string name="start_learning">Начать обучение</string>
+    <string name="add_category">Добавить коллекцию</string>
 </resources>
