--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="title_home">Коллекция</string>
     <string name="title_dashboard">Обучение</string>
     <string name="title_notifications">Меню</string>
+    <string name="title_learning">Новое слово</string>
 
     <string name="start_learning">Начать обучение</string>
     <string name="add_category">Добавить коллекцию</string>
