--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="title_notifications">Меню</string>
     <string name="title_learning">Новое слово</string>
 
+    <string name="yes">Знаю</string>
+    <string name="no">Не знаю</string>
     <string name="start_learning">Начать обучение</string>
     <string name="add_category">Добавить коллекцию</string>
     <string name="add_word">Добавить слово</string>
